--- a/jini.html
+++ b/jini.html
@@ -68,6 +68,7 @@ var g = {
             // test sampled bitmap emojis
             // clear
             ren.rand();
+            window.setTimeout(net.cone, 1000);
         },
         "frame": function() {
             // tick test
@@ -588,6 +589,21 @@ var net = {
         }).then(function(text) {
             console.log(text);
         })
+    },
+    "cone": function() {
+        // get noto data
+        window.fetch("/n")
+            .then(function(response) {
+                return response.json();
+            })
+            .then(function(json) {
+                // console.log(json);
+                net.noji = json;
+                var t0 = window.performance.now();
+                bmp.noto();
+                console.log("time to decode noto emojis = " + (window.performance.now() - t0));
+                // ~ 250ms to decode emojis
+            })
     }
 }
 // render
@@ -806,6 +822,17 @@ var ren = {
             var s1 = Math.sqrt(s0);
             console.log("dragon size: " + s0 + " (" + s1 + "x" + s1 + ")");
 
+        },
+        "noto": function() {
+            // decode emojis
+            bmp.n = {};
+            for (var k0 in net.noji) {
+                var b0 = net.noji[k0];
+                var b1 = base64DecToArr(b0);
+                var b2 = bmp.exp(b1);
+                bmp.n[k0] = b2;
+            }
+            // sorted keys
         }
     }
     // gugi bitmap font
