--- a/lera.html
+++ b/lera.html
@@ -49,6 +49,9 @@ var g = {
         },
         "golf": function() {
             var t0 = window.performance.now();
+            bmp.golf();
+            console.log("golf, dragon bitmaps and guji font decoded: " + (window.performance.now() - t0));
+            // golf, dragon bitmaps and guji font decoded in 42ms
         }
 }
 // scene
@@ -170,7 +173,88 @@ var net = {
             return rgba.mono(c0);
         }
     }
-
+    // bitmap
+    var bmp = {
+        "golf": function() {
+            // decode gugi bitmap font
+            bmp.a = {};
+            for (var k0 in net.golf.gugi) {
+                var s0 = net.golf.gugi[k0];
+                var b0 = base64DecToArr(s0);
+                bmp.a[k0] = bmp.exp(b0);
+            }
+            // decode dragon
+            var s1 = net.golf.dragon["0"];
+            var b1 = base64DecToArr(s1);
+            bmp.a["dragon"] = bmp.exp(b1);
+            // decode golf
+            var s2 = net.golf.golf["0"];
+            var b2 = base64DecToArr(s2);
+            bmp.a["golf"] = bmp.exp(s2);
+        },
+        "exp": function(b0) {
+            // expansion of uint8array
+            // to string of bits
+            var r0 = [];
+            for (var i = 0; i < b0.length; i++) {
+                var b1 = b0[i];
+                var s0 = binStr(b1);
+                for (var j = 0; j < 8; j++) {
+                    var s1 = s0.charAt(j);
+                    var n0 = parseInt(s1, 10);
+                    r0.push(n0);
+                }
+            }
+            return r0;
+        }
+    }
+    // string view
+    /*\
+    |*|
+    |*|  Base64 / binary data / UTF-8 strings utilities
+    |*|
+    |*|  https://developer.mozilla.org/en-US/docs/Web/JavaScript/Base64_encoding_and_decoding
+    |*|
+    \*/
+    /* Array of bytes to base64 string decoding */
+    function b64ToUint6 (nChr) {
+     return nChr > 64 && nChr < 91 ?
+         nChr - 65
+         : nChr > 96 && nChr < 123 ?
+         nChr - 71
+         : nChr > 47 && nChr < 58 ?
+         nChr + 4
+         : nChr === 43 ?
+         62
+         : nChr === 47 ?
+         63
+         :
+         0;
+    }
+    function base64DecToArr (sBase64, nBlocksSize) {
+     var sB64Enc = sBase64.replace(/[^A-Za-z0-9\+\/]/g, ""), nInLen = sB64Enc.length,
+         nOutLen = nBlocksSize ? Math.ceil((nInLen * 3 + 1 >> 2) / nBlocksSize) * nBlocksSize : nInLen * 3 + 1 >> 2,
+         taBytes = new Uint8Array(nOutLen);
+     for (var nMod3, nMod4, nUint24 = 0, nOutIdx = 0, nInIdx = 0; nInIdx < nInLen; nInIdx++) {
+         nMod4 = nInIdx & 3;
+         nUint24 |= b64ToUint6(sB64Enc.charCodeAt(nInIdx)) << 18 - 6 * nMod4;
+         if (nMod4 === 3 || nInLen - nInIdx === 1) {
+                 for (nMod3 = 0; nMod3 < 3 && nOutIdx < nOutLen; nMod3++, nOutIdx++) {
+                         taBytes[nOutIdx] = nUint24 >>> (16 >>> nMod3 & 24) & 255;
+                 }
+                 nUint24 = 0;
+         }
+     }
+     return taBytes;
+    }
+    // bitwise ops
+    // https://developer.mozilla.org/en/docs/Web/JavaScript/Reference/Operators/Bitwise_Operators
+    var binStr = function(nMask) {
+         // nMask must be between 0 and 255
+         for (var nFlag = 0, nShifted = nMask, sMask = ""; nFlag < 32;
+             nFlag++, sMask += String(nShifted >>> 31), nShifted <<= 1);
+         return sMask.slice(24);
+    } 
 </script>
         </head>
         <body id="alpha">
